# python-fireservicerota

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  setup.py
.github/: FUNDING.yml
fireservicerota/: __init__.py  __version__.py
pyfireservicerota/: __init__.py  __version__.py  const.py  errors.py
