[project]
name = "pyfireservicerota"
version = "0.0.44"
description = "Python 3 API wrapper for FireServiceRota/BrandweerRooster"
authors = [
    {name = "Ron Klinkien", email = "ron@cyberjunky.nl"},
]
dependencies = [
    "pytz",
    "oauthlib",
    "aiohttp",
    "aiohttp_retry",
    "websocket-client"
]
requires-python = ">=3.10"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/cyberjunky/python-fireservicerota"
"Bug Tracker" = "https://github.com/cyberjunky/python-fireservicerota/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.mypy]
ignore_missing_imports = true
